--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -14,7 +14,7 @@
     border: none;
     border-radius: 4px;
     color: white;
-    background-color: grey;
+    background-color: #1d72ae;
     transition-property: background-color, color, box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -22,7 +22,7 @@
 
 .btn:hover,
 .btn:focus {
-    background-color: rgb(69, 69, 205);
+    background-color: rgb(205 182 69);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
 }
